# ghc-t11084

./: ghc-t11084.cabal
src/: PEq.hs  T11084.hs  T11084Aux.hs
