name:                ghc-t11084
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          ryan.gl.scott@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     T11084
  other-modules:       T11084Aux
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010
